--- a/src/app/general-settings/general-settings.component.html
+++ b/src/app/general-settings/general-settings.component.html
@@ -34,7 +34,7 @@
                         <mdb-item-body></mdb-item-body>
                     </mdb-item>
                     <mdb-item class="no-collase">
-                        <mdb-item-head mdbRippleRadius><i class="fa fa-hand-pointer-o"></i> Tipos de Usuarios</mdb-item-head>
+                        <mdb-item-head mdbRippleRadius><i class="fa fa-hand-pointer-o"></i> Roles de Usuarios</mdb-item-head>
                         <mdb-item-body></mdb-item-body>
                     </mdb-item>
                     <mdb-item class="no-collase">
