--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Wrapper -->
 <div id="wrapper">
-	<div class="containter-fluid customMB">
+	<div class="containter-fluid customMB" *ngIf="currentUser">
 	<mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navBarColor pr-0" [containerInside]="false">
 		<logo>
 			<a class="logo navbar-brand pl-4" href="#"><img src="assets/img/logo-blanco.png" height="40px" width="auto"></a>
@@ -41,7 +41,7 @@
 				
 					<div *dropdownMenu class="dropdown-menu dropdown-primary dropdown" role="menu">
 						<a class="dropdown-item waves-light" href="#" mdbRippleRadius>Cuenta</a>
-						<a class="dropdown-item waves-light" href="#" mdbRippleRadius>Salir</a>
+						<a class="dropdown-item waves-light" (click)="logout()" mdbRippleRadius>Salir</a>
 					</div>
 				</li>
 			</ul>
