--- a/src/app/cash-register/cash-register-list/cash-register-list.component.html
+++ b/src/app/cash-register/cash-register-list/cash-register-list.component.html
@@ -1,12 +1,12 @@
 <ng-template #deleteTemplate>
-    <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deleteCashRegister()"
-        (close)="closeModal()">
+    <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage"
+        (delete)="deleteCashRegister()" (close)="closeModal()">
     </app-delete-template>
 </ng-template>
 
 <ng-template #errorTemplate>
-  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
-  </app-error-template>
+    <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+    </app-error-template>
 </ng-template>
 
 <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
@@ -18,8 +18,9 @@
                 </header>
             </div>
             <div class="float-right">
-                <a [routerLink]="['/settings/general/cashRegisters', { outlets: { edit: ['newCashRegister'] } }]" class="btn btn-primary btn-sm waves-light customButton"
-                    mdbRippleRadius> + Nueva Caja</a>
+                <a [routerLink]="['/settings/general/cashRegisters', { outlets: { edit: ['newCashRegister'] } }]"
+                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius 
+                    *ngIf='enableNew'> + Nueva Caja</a>
             </div>
         </div>
 
@@ -31,13 +32,13 @@
             <span class="errorMessage">{{ validationMessage }}</span>
         </div>
 
-        <div class="ml-5 mr-5 pl-5 pr-5  pt-1 pb-2 mt-2 text-center">            
+        <div class="ml-5 mr-5 pl-5 pr-5  pt-1 pb-2 mt-2 text-center">
             <div class="row mb-2 customBox">
                 <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
                     <h6 class="pt-2">Filtrar:</h6>
                     <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3">
-                        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
-                            id="query">
+                        <input type="text" class="input-alternate" placeholder="Nombre" name="query"
+                            [(ngModel)]='listFilter' id="query">
                     </div>
                 </form>
             </div>
@@ -48,17 +49,21 @@
                         <tr>
                             <th>Nombre</th>
                             <th>Disponible</th>
-                            <th>Acciones</th>
+                            <th *ngIf='enableActionButtons'>Acciones</th>
                         </tr>
                     </thead>
                     <tbody class="table-wrapper" *ngIf='cashRegisters && cashRegisters.length'>
                         <tr *ngFor='let cashRegister of filteredCashRegisters '>
                             <td>{{ cashRegister.name }}</td>
                             <td>{{ cashRegister.availableDescription }}</td>
-                            <td class="align-middle">
+                            <td class="align-middle" *ngIf='enableActionButtons'>
                                 <a [routerLink]="['/settings/general/cashRegisters', { outlets: { edit: ['editCashRegister', cashRegister._id] } }]"
-                                    class="btn btn-yellow btn-sm customButtonText">Editar</a>                                
-                                <button [disabled]="cashRegister.default === true" type="button" class="btn btn-red btn-sm" (click)="showModalDelete(deleteTemplate, cashRegister._id)">Eliminar</button>
+                                    class="btn btn-yellow btn-sm customButtonText"
+                                    *ngIf='enableEdit'>Editar</a>
+                                <button [disabled]="cashRegister.default === true" type="button"
+                                    class="btn btn-red btn-sm"
+                                    (click)="showModalDelete(deleteTemplate, cashRegister._id)"
+                                    *ngIf='enableDelete'>Eliminar</button>
                             </td>
                         </tr>
                     </tbody>
