--- a/src/app/category/category-list/category.component.html
+++ b/src/app/category/category-list/category.component.html
@@ -16,7 +16,8 @@
         </header>
     </div>
     <div style="float: right">
-        <a [routerLink]="['newCategory']" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nueva Categoria</a>
+        <a [routerLink]="['newCategory']" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+        *ngIf='enableNew'> + Nueva Categoria</a>
     </div>
 </div>
 <div class="ml-5 mr-5 pl-5 pr-5  pt-1 pb-2 mt-2 text-center">
@@ -41,7 +42,7 @@
                     <th>Nombre</th>
                     <th>Menu</th>
                     <th class="customShortTh">Disponible</th>
-                    <th>Acciones</th>
+                    <th *ngIf='enableActionButtons'>Acciones</th>
                 </tr>
             </thead>
             <tbody class="table-wrapper" *ngIf='categories && categories.length'>
@@ -49,9 +50,13 @@
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{category.name}}</td>
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ category.menu.name }}</td>
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ category.availableDescription }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle">
-                        <a [routerLink]="['edit', category._id]" class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                        <a (click) = "showModalDelete(deleteTemplate, noDelete, category._id)" class="btn btn-red btn-sm">Eliminar</a>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons' class="align-middle">
+                        <a [routerLink]="['edit', category._id]" 
+                        class="btn btn-yellow btn-sm customButtonText"
+                        *ngIf='enableEdit'>Editar</a>
+                        <a (click) = "showModalDelete(deleteTemplate, noDelete, category._id)" 
+                        class="btn btn-red btn-sm"
+                        *ngIf='enableDelete'>Eliminar</a>
                     </td>
                 </tr>
             </tbody>
