--- a/src/app/client/client-list/client-list.component.html
+++ b/src/app/client/client-list/client-list.component.html
@@ -5,8 +5,8 @@
 </ng-template>
 
 <ng-template #errorTemplate>
-  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
-  </app-error-template>
+    <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+    </app-error-template>
 </ng-template>
 
 <div class="row pl-0 pr-0 ml-0 mr-0">
@@ -15,22 +15,26 @@
             <header class="major">
                 <h5 class="customTitle">{{ pageTitle }}</h5>
             </header>
-            <a class="customFloatedButton" [routerLink]="['/clients-module/clients', { outlets: { edit: ['newClient'] } }]" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Cliente</a>
-        </div>        
+            <a class="customFloatedButton"
+                [routerLink]="['/clients-module/clients', { outlets: { edit: ['newClient'] } }]"
+                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                *ngIf='enableNew'> + Nuevo Cliente</a>
+        </div>
 
         <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
-            <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">  
+            <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
                 <div class="row mb-2 customBox pt-1 pb-2 mt-2 text-center">
                     <form #form="ngForm" novalidate class="form-inline">
                         <h6 class="pt-2">{{ filterLabel }}</h6>
                         <div class="md-form form-group mr-0 ml-0 col-md-7 col-lg-7">
-                            <input type="text" class="input-alternate" placeholder="Nombre"  name="query" [(ngModel)]='listFilter' id="query" >
+                            <input type="text" class="input-alternate" placeholder="Nombre" name="query"
+                                [(ngModel)]='listFilter' id="query">
                         </div>
-                    </form>    
+                    </form>
                 </div>
 
                 <div class="row">
-                    <table class="table table-bordered table-hover customTable"  mdbTable #tableEl="mdbTable">
+                    <table class="table table-bordered table-hover customTable" mdbTable #tableEl="mdbTable">
                         <thead class="primary-color customTableText">
                             <tr>
                                 <th>Nombre</th>
@@ -38,33 +42,52 @@
                                 <th>Dirección</th>
                                 <th>Saldo</th>
                                 <th>Limite Cta Cte</th>
-                                <th>Acciones</th>
+                                <th *ngIf='enableActionButtons'>Acciones</th>
                             </tr>
                         </thead>
                         <tbody class="table-wrapper" *ngIf='filteredClients && filteredClients.length'>
-                            <tr *ngFor = 'let client of filteredClients; let i = index'>
-                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ client.name }}</td>
-                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ client.tel }}</td>
-                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ client.addressStreet || ' '}} {{ client.addressNumber || ' '}} {{ client.addressDpto || ' ' }}</td>
-                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>{{ client.balance | currency:'USD':code:'2.2-2'}}</td>
-                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && !client.enabledTransactions'> - </td>
-                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && client.enabledTransactions'>{{ client.limitCtaCte | currency:'USD':code:'2.2-2'}}</td>
-                                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle">
-                                        <a [routerLink]="['/clients-module/clients', { outlets: { edit: ['editClient', client._id] } }]" class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                                        <a (click) = "showModalDelete(deleteTemplate, client._id)" class="btn btn-red btn-sm">Eliminar</a>
-                                    </td>
+                            <tr *ngFor='let client of filteredClients; let i = index'>
+                                <td
+                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                                    {{ client.name }}</td>
+                                <td
+                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                                    {{ client.tel }}</td>
+                                <td
+                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                                    {{ client.addressStreet || ' '}} {{ client.addressNumber || ' '}}
+                                    {{ client.addressDpto || ' ' }}</td>
+                                <td
+                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                                    {{ client.balance | currency:'USD':code:'2.2-2'}}</td>
+                                <td
+                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && !client.enabledTransactions'>
+                                    - </td>
+                                <td
+                                    *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && client.enabledTransactions'>
+                                    {{ client.limitCtaCte | currency:'USD':code:'2.2-2'}}</td>
+                                <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'
+                                    class="align-middle">
+                                    <a [routerLink]="['/clients-module/clients', { outlets: { edit: ['editClient', client._id] } }]"
+                                        class="btn btn-yellow btn-sm customButtonText"
+                                        *ngIf='enableEdit'>Editar</a>
+                                    <a (click)="showModalDelete(deleteTemplate, client._id)"
+                                        class="btn btn-red btn-sm"
+                                        *ngIf='enableDelete'>Eliminar</a>
+                                </td>
                             </tr>
                         </tbody>
                         <tfoot class="grey lighten-5 w-100">
                             <tr>
                                 <td colspan="6">
-                                <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredClients"></mdb-table-pagination>
+                                    <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredClients">
+                                    </mdb-table-pagination>
                                 </td>
                             </tr>
                         </tfoot>
                     </table>
                 </div>
-            </div>                
+            </div>
         </div>
     </div>
     <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-0 pl-0 pb-0 mt-0 pt-0 outletGeneric">
