--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -85,9 +85,6 @@ overflow: auto; overflow-x: hidden;">
           <a (click)="validateSizesAndOptions(product, 1)" class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light productButton" mdbRippleRadius><span>{{product.name}}</span></a>
         </div>
       </div>
-      <!-- <div *ngIf="products && products.length = 0" class="col-9 d-flex flex-wrap col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
-        <span>No hay productos disponibles para la categoria seleccionada.</span>
-      </div> -->
       <div *ngIf="products.length == 0 && categorySelected == false" class="col-9 d-flex justify-content-center col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-5 mr-0 ml-0 mt-0 mb-0">
           <h3>{{ noCategoriesText }}</h3>
       </div>
@@ -108,7 +105,7 @@ overflow: auto; overflow-x: hidden;">
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" *ngIf='enableAddProducts'>
       <div class="col-lg-12 col-md-12 col-sm-12 customAddProductsTitle"><span class="align-middle">{{ 'Adicionar' | uppercase }}</span></div>
       <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 customAddProductsSection">
         <div class="row">
@@ -174,8 +171,6 @@ overflow: auto; overflow-x: hidden;">
           <button type="button" class="float-left btn btn-sm customButtonCancel waves-light ml-4 mr-0" mdbRippleRadius (click)="cancelPreOrder()" >Cancelar</button>
           <button type="button" class="float-right btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="confirmPreOrder()" >Confirmar</button>
         </div>  
-        <!-- <div class="float-right col-md-6 col-lg-6 col-sm-6 pr-2">
-        </div>  -->
       </div>
     </div>
     <!-- Listado de productos en order -->
@@ -191,7 +186,7 @@ overflow: auto; overflow-x: hidden;">
           <div class="pl-4 pr-1 pb-2">
             <span>$ {{ product.price }} </span>
           </div>
-          <div class="col-2 p-0">
+          <div class="col-2 p-0" *ngIf='enableDeleteProducts'>
             <button type="button" [disabled]="product.deleted === true" class="z-depth-0 btn buttonOrder btn-tb btn-primary waves-effect waves-light float-left mt-0" (click)="showModalRemoveProduct(deleteTemplate, product)">
             <i class="fa fa-times fa-1x"></i>
             </button>
@@ -208,41 +203,6 @@ overflow: auto; overflow-x: hidden;">
       </div>
     </div>
 
-    <!-- <div class="row pl-2 customDivHeight" *ngIf='order.users[0].products && order.users[0].products.length'>
-      <ul class="list-group">
-        <div class="btn-group customProductMargin" *ngFor="let product of order.users[0].products" data-toggle="buttons">   
-          <div class="col-md-12">  
-            <div class="row">
-              <p>{{ product.quantity }}</p>
-
-              <li class="list-group-item customProductShowingName pb-1 pt-0">
-                  {{ product.name }}              
-              </li>  
-
-              <p class="mr-1">$ {{ product.price }} </p>  
-              
-              <button 
-                type="button" 
-                [disabled]="product.deleted === true"
-                class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left" 
-                (click)="showModalRemoveProduct(deleteTemplate, product)">
-                <i class="fa fa-times fa-1x"></i>
-              </button>
-            </div>     
-            <div class="row">
-              <div *ngIf="product.observations !== undefined && product.observations !== ''">
-                {{ product.observations }}
-              </div>
-
-              <div class="pl-4" *ngIf="product.deleted === true">
-                <p> - CANCELADO: {{ product.deletedReason }} </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </ul>
-    </div>     -->
-
     <!--Total-->
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-6 totalOrder">
@@ -252,7 +212,7 @@ overflow: auto; overflow-x: hidden;">
         <span class="float-right">{{ '$ ' + order.totalPrice | uppercase }}</span>
       </div>      
     </div>
-    <div class="row">
+    <div class="row" *ngIf='enableCloseOrder'>
       <div class="col-4 offset-4 mt-2">               
         <button type="button" class="btn btn-md btn-primary waves-light" mdbRippleRadius (click)="closeTable(closeOrderTemplate)">Cerrar Mesa</button>
       </div>
