--- a/src/app/payment-type/payment-type-list/payment-type-list.component.html
+++ b/src/app/payment-type/payment-type-list/payment-type-list.component.html
@@ -19,7 +19,8 @@
             </div>
             <div class="float-right">
                 <a [routerLink]="['/settings/general/paymentTypes', { outlets: { edit: ['newPaymentType'] } }]"
-                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nueva Forma de Pago</a>
+                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                    *ngIf='enableNew'> + Nueva Forma de Pago</a>
             </div>
         </div>
 
@@ -47,19 +48,21 @@
                         <tr>
                             <th>Nombre</th>
                             <th>Disponible</th>
-                            <th>Acciones</th>
+                            <th *ngIf='enableActionButtons'>Acciones</th>
                         </tr>
                     </thead>
                     <tbody class="table-wrapper" *ngIf='paymentTypes && paymentTypes.length'>
                         <tr *ngFor='let paymentType of filteredPaymentTypes '>
                             <td>{{ paymentType.name }}</td>
                             <td>{{ paymentType.availableDescription }}</td>
-                            <td class="align-middle">
+                            <td class="align-middle" *ngIf='enableActionButtons'>
                                 <a [routerLink]="['/settings/general/paymentTypes', { outlets: { edit: ['editPaymentType', paymentType._id] } }]"
-                                    class="btn btn-yellow btn-sm customButtonText">Editar</a>
+                                    class="btn btn-yellow btn-sm customButtonText"
+                                    *ngIf='enableEdit'>Editar</a>
                                 <button [disabled]="paymentType.default === true" type="button"
                                     class="btn btn-red btn-sm"
-                                    (click)="showModalDelete(deleteTemplate, paymentType._id)">Eliminar</button>
+                                    (click)="showModalDelete(deleteTemplate, paymentType._id)"
+                                    *ngIf='enableDelete'>Eliminar</button>
                             </td>
                         </tr>
                     </tbody>
