--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -5,8 +5,8 @@
 </ng-template>
 
 <ng-template #errorTemplate>
-  <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
-  </app-error-template>
+    <app-error-template [errorTitle]="modalErrorTittle" [errorMessage]="modalErrorMessage" (close)="closeModal()">
+    </app-error-template>
 </ng-template>
 
 <div class="pageTitle">
@@ -16,33 +16,40 @@
         </header>
     </div>
     <div style="float: right">
-        <a [routerLink]="['newProduct']" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Producto</a>
+        <a [routerLink]="['newProduct']" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+            *ngIf='enableNew'> + Nuevo Producto</a>
     </div>
 </div>
-            
+
 <div class="ml-5 mr-5 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
     <div class="row mb-2 card pl-2 pr-2 pb-1 pt-1">
         <form #form="ngForm" novalidate class="form-inline">
             <h6 class="pt-2">Filtrar:</h6>
             <div class="md-form form-group mr-0 pr-0 col-lg-1 col-md-1">
-                <input type="text" class="input-alternate" placeholder="Codigo" name="queryCod" [(ngModel)]='listFilterCod' id="queryCod">
+                <input type="text" class="input-alternate" placeholder="Codigo" name="queryCod"
+                    [(ngModel)]='listFilterCod' id="queryCod">
             </div>
             <div class="md-form form-group mr-0 ml-0 col-md-2 col-lg-2">
-                <input type="text" class="input-alternate" placeholder="Nombre"  name="query" [(ngModel)]='listFilter' id="query" >
+                <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
+                    id="query">
             </div>
             <h6 class="pt-2 ml-2">Categoria:</h6>
-            <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left"> 
-                <mdb-select #queryCategory name="queryCategory" (selected)="filterByCategoria(queryCategory.value)" id="queryCategory" [options]="categoriesOptions"  
-                [(ngModel)]="selectedValue" placeholder="Choose your option" class="colorful-select dropdown-primary"></mdb-select>    
+            <div class="md-form form-group mr-2 col-md-2 col-lg-2 text-left">
+                <mdb-select #queryCategory name="queryCategory" (selected)="filterByCategoria(queryCategory.value)"
+                    id="queryCategory" [options]="categoriesOptions" [(ngModel)]="selectedValue"
+                    placeholder="Choose your option" class="colorful-select dropdown-primary"></mdb-select>
             </div>
             <h6 class="pt-2 ml-2 customH6">Actualizar Precios:</h6>
             <div class="ml-1 col-md-2 mr-0 md-form form-group">
-                <input class="input-alternate" placeholder="Ingrese porcentaje" [(ngModel)]="percentage" required type="number" name="percentage" id="percentage" >
+                <input class="input-alternate" placeholder="Ingrese porcentaje" [(ngModel)]="percentage" required
+                    type="number" name="percentage" id="percentage">
             </div>
             <div class="md-form form-group customMdForm">
-                <button class="btn btn-sm btn-success customCheckButton float-right" [disabled]='form.invalid || percentage === 0' (click)='updatePrice()'><i class="fa fa-check"></i></button>
+                <button class="btn btn-sm btn-success customCheckButton float-right"
+                    [disabled]='form.invalid || percentage === 0' (click)='updatePrice()'><i
+                        class="fa fa-check"></i></button>
             </div>
-        </form>    
+        </form>
     </div>
 
     <div class="row">
@@ -51,31 +58,43 @@
                 <tr>
                     <th class="customShortTh">Código</th>
                     <th class="customLongTh">Nombre</th>
-                    <th class="customShortTh">Precio</th>                                     
+                    <th class="customShortTh">Precio</th>
                     <th>Categoría</th>
                     <th>Carta</th>
                     <th class="customShortTh">Disponible</th>
-                    <th class="customThTd">Acciones</th>
+                    <th class="customThTd" *ngIf='enableActionButtons'>Acciones</th>
                 </tr>
             </thead>
             <tbody class="table-wrapper" *ngIf='products && products.length'>
-                <tr *ngFor = 'let product of filteredProducts; let i = index' >
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ product.code }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customLongTh">{{ product.name }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ product.price | currency:'USD':code:'2.2-2' }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle">{{ product.category.name }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle">{{ product.category.menu.name }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ product.availableDescription }}</td>
-                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="customThTd align-middle">
-                        <a [routerLink]="['edit', product._id]" class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                        <a (click) = "showModalDelete(deleteTemplate, noDeleteTemplate, product._id)" class="btn btn-red btn-sm">Eliminar</a>
+                <tr *ngFor='let product of filteredProducts; let i = index'>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+                        class="align-middle customShortTh">{{ product.code }}</td>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+                        class="align-middle customLongTh">{{ product.name }}</td>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+                        class="align-middle customShortTh">{{ product.price | currency:'USD':code:'2.2-2' }}</td>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+                        class="align-middle">{{ product.category.name }}</td>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+                        class="align-middle">{{ product.category.menu.name }}</td>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'
+                        class="align-middle customShortTh">{{ product.availableDescription }}</td>
+                    <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'
+                        class="customThTd align-middle">
+                        <a [routerLink]="['edit', product._id]"
+                            class="btn btn-yellow btn-sm customButtonText"
+                            *ngIf='enableEdit'>Editar</a>
+                        <a (click)="showModalDelete(deleteTemplate, noDeleteTemplate, product._id)"
+                            class="btn btn-red btn-sm"
+                            *ngIf='enableDelete'>Eliminar</a>
                     </td>
                 </tr>
             </tbody>
             <tfoot class="grey lighten-5 w-100">
                 <tr>
                     <td colspan="7">
-                        <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredProducts"></mdb-table-pagination>
+                        <mdb-table-pagination [tableEl]="tableEl" [searchDataSource]="filteredProducts">
+                        </mdb-table-pagination>
                     </td>
                 </tr>
             </tfoot>
