--- a/src/app/section/section-list-config/section-list-config.component.html
+++ b/src/app/section/section-list-config/section-list-config.component.html
@@ -18,8 +18,9 @@
                 </header>
             </div>
             <div class="float-right">
-                <a [routerLink]="['/settings/general/sections', { outlets: { edit: ['newSection'] } }]" class="btn btn-primary btn-sm waves-light customButton"
-                    mdbRippleRadius> + Nueva Sala
+                <a [routerLink]="['/settings/general/sections', { outlets: { edit: ['newSection'] } }]"
+                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                    *ngIf='enableNew'> + Nueva Sala
                 </a>
             </div>
         </div>
@@ -28,8 +29,8 @@
                 <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
                     <h6 class="pt-2">Filtrar:</h6>
                     <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3">
-                        <input type="text" class="input-alternate" placeholder="Nombre" name="query" [(ngModel)]='listFilter'
-                            id="query">
+                        <input type="text" class="input-alternate" placeholder="Nombre" name="query"
+                            [(ngModel)]='listFilter' id="query">
                     </div>
                 </form>
             </div>
@@ -38,16 +39,19 @@
                     <thead class="primary-color customTableText">
                         <tr>
                             <th>Nombre</th>
-                            <th>Acciones</th>
+                            <th *ngIf='enableActionButtons'>Acciones</th>
                         </tr>
                     </thead>
                     <tbody class="table-wrapper" *ngIf='filteredSections && filteredSections.length'>
                         <tr *ngFor='let section of filteredSections '>
                             <td>{{ section.name }}</td>
-                            <td class="align-middle">
+                            <td class="align-middle" *ngIf='enableActionButtons'>
                                 <a [routerLink]="['/settings/general/sections', { outlets: { edit: ['editSection', section._id] } }]"
-                                    class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                                <a (click)="showModalDelete(deleteTemplate, section._id)" class="btn btn-red btn-sm">Eliminar</a>
+                                    class="btn btn-yellow btn-sm customButtonText"
+                                    *ngIf='enableEdit'>Editar</a>
+                                <a (click)="showModalDelete(deleteTemplate, section._id)"
+                                    class="btn btn-red btn-sm"
+                                    *ngIf='enableDelete'>Eliminar</a>
                             </td>
                         </tr>
                     </tbody>
