--- a/src/app/supplier/supplier-list/supplier-list.component.html
+++ b/src/app/supplier/supplier-list/supplier-list.component.html
@@ -17,7 +17,8 @@
             </header>
             <a class="customFloatedButton"
                 [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['newSupplier'] } }]"
-                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Proveedor</a>
+                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                *ngIf='enableNew'> + Nuevo Proveedor</a>
         </div>
         <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
             <div class="col-md-12 col-lg-12 col-sm-12 pl-5 pr-5 pt-4 pb-2 mt-2 text-center">
@@ -33,7 +34,7 @@
                                 <th>Email</th>
                                 <th>Teléfono</th>
                                 <th>Dirección</th>
-                                <th>Acciones</th>
+                                <th *ngIf='enableActionButtons'>Acciones</th>
                             </tr>
                         </thead>
                         <tbody class="table-wrapper" *ngIf='filteredSuppliers && filteredSuppliers.length'>
@@ -52,11 +53,13 @@
                                     supplier.addressStreet || ' '}} {{ supplier.addressNumber || ' '}} {{
                                     supplier.addressDpto || ' ' }}</td>
                                 <td class="align-middle"
-                                    *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)'>
+                                    *ngIf='(supplier.active === true || showInactiveSuppliers === true) && (i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'>
                                     <a [routerLink]="['/suppliers-module/suppliers', { outlets: { edit: ['editSupplier', supplier._id] } }]"
-                                        class="btn btn-yellow btn-sm customButtonText">Editar</a>
+                                        class="btn btn-yellow btn-sm customButtonText"
+                                        *ngIf='enableEdit'>Editar</a>
                                     <a (click)="showModalDelete(deleteTemplate, supplier._id)"
-                                        class="btn btn-red btn-sm">Eliminar</a>
+                                        class="btn btn-red btn-sm"
+                                        *ngIf='enableDelete'>Eliminar</a>
                                 </td>
                             </tr>
                         </tbody>
