Los app menus se construyen segun los registrado en la bd. Se agregan traducciones.

--- a/src/app/section/section-edit/section-edit.component.html
+++ b/src/app/section/section-edit/section-edit.component.html
@@ -13,7 +13,7 @@
 <div *ngIf='section' class="col-12 pl-0 pr-0 formNewEditSettings">
   <div class="col-12 pr-0 outletTitle">
     <h5>
-      {{pageTitle + ': ' + cashRegisterNameModified}}
+      {{pageTitle + ': ' + sectionNameModified}}
     </h5>
   </div>
   <form method="post" novalidate [formGroup]="sectionForm">
