--- a/src/app/sales-list/sales-list.component.html
+++ b/src/app/sales-list/sales-list.component.html
@@ -1,26 +1,14 @@
-
 <!-- Nav tabs -->
 <ul class="nav classic-tabs tabs-primary customLinksColor">
-  <li class="nav-item customFirstLi">
-    <a class="waves-effect"
-    [routerLink]="['sales-list']" routerLinkActive="active">
-        Ventas
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="waves-effect"
-    [routerLink]="['cash-flows', { outlets: { edit: ['selectItem'] } }]" routerLinkActive="active">
-        Movimientos de Caja
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="waves-effect"
-    [routerLink]="['cash-counts', { outlets: { edit: ['selectItem'] } }]" routerLinkActive="active">
-      Arqueos de Caja
-    </a>
-  </li>
- </ul>
- <!-- Tab panels -->
- <div class="tab-content customContentCard pb-0">
-    <router-outlet></router-outlet>
- </div>
+  <div *ngFor='let appMenu of appMenus'>
+    <li *ngIf='appMenu.show' class="nav-item">
+      <a class="waves-effect" [routerLink]="[appMenu._id, { outlets: { edit: ['selectItem'] } }]" routerLinkActive="active">
+        {{ 'AppMenus.' + appMenu._id | translate }}
+      </a>
+    </li>
+  </div>
+</ul>
+<!-- Tab panels -->
+<div class="tab-content customContentCard pb-0">
+  <router-outlet></router-outlet>
+</div>
