--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,20 +1,14 @@
-
 <!-- Nav tabs -->
 <ul class="nav classic-tabs tabs-primary customLinksColor">
-  <li class="nav-item customFirstLi">
-    <a class="waves-effect"
-    [routerLink]="['general']" routerLinkActive="active">
-        Configuración General
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="waves-effect"
-    [routerLink]="['section']" routerLinkActive="active">
-        Salas y Mesas
-    </a>
-  </li>
- </ul>
- <!-- Tab panels -->
- <div class="tab-content customContentCard">
-    <router-outlet></router-outlet>
- </div>
+  <div *ngFor='let appMenu of appMenus'>
+    <li *ngIf='appMenu.show' class="nav-item">
+      <a class="waves-effect" [routerLink]="appMenu._id" routerLinkActive="active">
+        {{ 'AppMenus.' + appMenu._id | translate }}
+      </a>
+    </li>
+  </div>
+</ul>
+<!-- Tab panels -->
+<div class="tab-content customContentCard">
+  <router-outlet></router-outlet>
+</div>
